crates/omnifs-cli/src/inspector/snapshots/omnifs__inspector__ui__tests__inspector_empty.snap
---
source: crates/omnifs-cli/src/inspector/ui.rs
expression: empty_screen
---
┌ inspect · activity · replay empty 1× · 0.0/s · drop 0 ───────────────────────────────────────────┐
│                                                                                                  │
└ q quit  ? help  v view  tab focus  ↑/↓ navigate  ↵ collapse  space pause  e errors  l latency  y ┘
┌ mounts ──────────────────────────────────────────────────────────────────────────────────────────┐
│waiting for activity…                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ recent paths ───────────────────────────────────────┐┌ operations · recent (0 / 4096) ───────────┐
│Nothing yet.                                         ││Nothing yet.                               │
│  Generate activity: ls /omnifs/github               ││  Generate activity: ls /omnifs/github     │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ selected operation ──────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
